add put swegger
